--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Group_36",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "momentjs": "^2.0.0",
     "mongodb": "^6.3.0"
   }
 }
