--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "momentjs": "^2.0.0",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "xss": "^1.0.14"
   }
 }
