--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^7.1.2",
     "momentjs": "^2.0.0",
     "mongodb": "^6.3.0",
+    "natural": "^6.10.0",
     "xss": "^1.0.14"
   }
 }
