--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node seed.js",
     "start": "node app.js"
   },
   "author": "Group_36",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "momentjs": "^2.0.0",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "natural": "^6.10.0",
+    "xss": "^1.0.14"
   }
 }
